--- a/introduction.tex
+++ b/introduction.tex
@@ -10,11 +10,11 @@ Given the constantly improving cost and speed of genome sequencing, it is reason
 \section{The Genotype-Phenotype Problem}
 \label{introGenoPheno}
 
-Linking genotype to phenotype is a very difficult problem. The part of the human genome we understand best are protein-coding genes, yet they only constitute a small fraction the whole. Impacts of mutations in other functional elements such as splice sites, promoters, or regulatory sequences are more difficult to assay, not to mention the vast stretches of intragenic space. While one might expect the latter to not bear functional significance \textit{a priori}, the fact that a large number of loci identified as correlated with diseases in genome-wide association studies (GWAS) are found within these regions~\cite{edwards_beyond_2013} hints at more functions hidden within. % Edwards2013: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3824120/
+Linking genotype to phenotype is a very difficult problem. The part of the human genome we understand best are protein-coding genes, yet they only constitute a small fraction the whole. Impacts of mutations in other functional elements such as splice sites, promoters, or regulatory sequences are more difficult to assay, not to mention the vast stretches of intragenic space. While one might expect the latter to not bear functional significance \textit{a priori}, the fact that a large number of loci identified as correlated with diseases in genome-wide association studies (GWAS) are found within these regions~\cite{edwards_beyond_2013} hints at more functions hidden within. 
 But even for protein-coding sequences the problem is far from simple. Alleles with simple Mendelian behaviour are the exception rather than the rule~\todo{REF}. Most phenotypes are complex, i.e. they emerge through the interplay of many different genetic or environmental factors. Conversely, many genes are also pleiotropic, i.e. they are involved more than one mechanism. As a result of this complexity, a mutation found in one person may not have the same effect as in another---a phenomenon called incomplete penetrance. Similarly, two different mutations within the same coding sequence need not have the same effect either. Depending on how the translated protein is affected (e.g. catastrophic folding failure, alteration of a molecular interaction interface or active site, or a subtle change on an unused surface) the effects may differ in severity or in rare cases may even result in the emergence of new behaviours.
 
 %Clinical perspective on the genotype-phenotype problem
-Given the much greater difficulty of interpreting non-coding regions \todo{REF}, clinical applications have so far largely concentrated on protein-coding genes. Sequencing panels for known disease-associated genes and even whole-exome sequencing (WES) are widely commercially available. A number of different standards for classifying mutations with respect to their potential health impacts have been proposed. Most prominently, the American College of Medical Genetics and Genomics (ACMG) standard~\cite{richards_standards_2015}. % Richards2015: http://www.nature.com/gim/journal/v17/n5/full/gim201530a.html
+Given the much greater difficulty of interpreting non-coding regions \todo{REF}, clinical applications have so far largely concentrated on protein-coding genes. Sequencing panels for known disease-associated genes and even whole-exome sequencing (WES) are widely commercially available. A number of different standards for classifying mutations with respect to their potential health impacts have been proposed. Most prominently, the American College of Medical Genetics and Genomics (ACMG) standard~\cite{richards_standards_2015}.
 It defines categories stretching from ``pathogenic'' via ``variant of uncertain significance'' (VUS) to ``benign''. Even though the mutational landscape for a handful of genes, such as \gene{BRCA1} are explored better than others due to their higher potential for monetization~\cite{cheon_variants_2014}, the vast majority of clinical variants are currently classified as VUS. For example, in a recent study using gene panels assessing germline cancer risk loci~\cite{maxwell_evaluation_2016}, over 98\% of missense variants have been called VUS. Not only can these uncertainties unduly burden patients with unnecessary anxiety, they also call into question the value of sequencing in the clinic if the majority of findings are not actionable. With increasing use of WES over gene panels, this problem is only going to get worse. According to the 1000 Genomes Project data, every person carries 100-400 missense variants that are so rare that they have likely never been seen before in the clinic~\cite{the_1000_genomes_project_consortium_global_2015}. In the absence of previous observations they would automatically be added to the long list of VUS.
 
 \section{\textit{In silico} approaches to variant function assessment}
@@ -110,7 +110,9 @@ In addition to the various mutagenesis methods discussed here, it may be noted t
 
 \paragraph{Selection approaches:} The most central component of a Deep Mutation Scan is the selection process. In section~\ref{complY2HIntro} we have already discussed two options in detail: Y2H and functional complementation. There are a fair number of other options, even though many of them may not be as useful in the context of identifying disease variants. The different assays used in previous studies can be sorted into three broad categories: (i) \textit{In~vitro} display methods (such as Phage Display or Ribodisplay); (ii) competition-based methods that couple a protein property under investigation (such as molecular interactions, toxicity, or overall functionality) to host fitness; and (iii) Cell sorting based on fluorescence labeled reporters.
 
-Phage display~\cite{smith_filamentous_1985} and ribodisplay~\todo{cite} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide target~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods instead.
+Phage display~\cite{smith_filamentous_1985} and ribodisplay~\cite{mattheakis_vitro_1994} couple the genetic information encoding a given variant to the physical protein itself and select according to the protein's ability to bind to a fixed interactor. Variants that are unable to bind are washed away and thus depleted. This can be done in multiple rounds, as the associated genetic information can be replicated again after selection (via viral propagation in bacteria for phage display or via PCR in ribodisplay). Fowler and colleagues employed phage display in their seminal DMS study with respect to the binding of the YAP65-WW domain to its cognate peptide target~\cite{fowler_high-resolution_2010}. However, since display methods are only feasible for small proteins or fragments thereof, more recent studies have employed more scalable methods instead.
+%mattheakis_vitro_1994: L C Mattheakis, R R Bhatt, and W J Dower, An in vitro polysome display system for identifying ligands from very large peptide libraries  http://www.pnas.org/content/91/19/9022
+
 
 The most frequently applied selection mechanisms are fitness based. In these cases a particular property of the variant protein is coupled to its host cell's ability to thrive in competitive growth. Yeast-2-Hybrid and functional complementation (as introduced in section~\ref{complY2HIntro}) are two examples of such methods. While Y2H couples fitness to the ability of the protein to maintain a specific protein-protein interaction, complementation does so for the proteins overall ability to perform its biological role. A popular condition-dependent extension to complementation is selection according to drug resistance~\cite{wu_systematic_2013,wagenaar_resistance_2014}. But other fitness-based selection methods have been used in DMS as well. For example, Adkar and colleagues used the toxicity of CCDB in \species{E.~coli}~\cite{adkar_protein_2012}, while Kim and colleagues select according to degron activity by fusing the degron to an auxotrophic marker~\cite{kim_high-throughput_2013}. Finally, a number of DMS studies have been performed on viral genes, by selecting for virus propagation efficiency~\cite{bloom_experimentally_2014,thyagarajan_inherent_2014}.
 
