more references resolved, some more y2h intro

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -318,9 +318,9 @@ To detect potential direct compensatory relationships, the genetic interactions 
 
 
 \subsection{Structural analysis of disease gene maps}
-Co-crystal and NMR structure data for SUMO1, TPK1, NCS1 and CALM1 was obtained from the PDB (Entries: \texttt{2G4D}~\cite{xu_crystal_2006}; \texttt{2IO2}~\cite{Reverter http://dx.doi.org/10.1038/nsmb1168}; \texttt{3KYD}~\cite{olsen_active_2010}; \texttt{3UIP}~\cite{gareau_determinants_2012}; \texttt{2ASQ}~\cite{Song http://dx.doi.org/10.1074/jbc.M507059200}; \texttt{4WJO}~\cite{Cappadocia http://dx.doi.org/10.1016/j.str.2014.10.015}; \texttt{4WJQ}~\cite{same as previous}; \texttt{1WYW}~\cite{Baba et al http://dx.doi.org/10.1038/nature03634}; 
-\texttt{2L2E}~\cite{Ames etal unpublished}; \texttt{4GUK}~\cite{Chengpeng etal unpublished}; \texttt{5AFP}~\cite{Pandalaneni etal http://dx.doi.org/10.1074/jbc.M114.627059}; 
-\texttt{3G43}~\cite{Fallon etal http://www.pnas.org/content/106/13/5135}; \texttt{4DJC}~\cite{sarhan_crystallographic_2012}; 
+Co-crystal and NMR structure data for SUMO1, TPK1, NCS1 and CALM1 was obtained from the PDB (Entries: \texttt{2G4D}~\cite{xu_crystal_2006}; \texttt{2IO2}~\cite{reverter_structural_2006}; \texttt{3KYD}~\cite{olsen_active_2010}; \texttt{3UIP}~\cite{gareau_determinants_2012}; \texttt{2ASQ}~\cite{song_small_2005}; \texttt{4WJO}~\cite{cappadocia_structural_2015-1}; \texttt{4WJQ}~\cite{cappadocia_structural_2015-1}; \texttt{1WYW}~\cite{baba_crystal_2005}; 
+\texttt{2L2E}~(Ames \etal\ unpublished); \texttt{4GUK}~(Chengpeng \etal\ unpublished); \texttt{5AFP}~\cite{pandalaneni_neuronal_2015}; 
+\texttt{3G43}~\cite{fallon_crystal_2009}; \texttt{4DJC}~\cite{sarhan_crystallographic_2012}; 
 \texttt{3S4Y}~\cite{timm_crystal_2001}; ). Structures were colorized using the same method described above for UBE2I and analyzed using OpenPyMol~\cite{schrodinger_pymol_2016}.
 
 %NCS1: 2L2E myristoylated NCS1 (pombe) Ames et al unpublished
